@@ -6,7 +6,7 @@
 
     <groupId>io.github.oguzkeremyildiz</groupId>
     <artifactId>Cookies</artifactId>
-    <version>1.2.3</version>
+    <version>1.2.4</version>
 
     <name>Cookies</name>
     <description>Java library</description>
@@ -46,6 +46,10 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.6.1</version>
                 <configuration>
+                    <release>14</release>
+                    <compilerArgs>
+                        --enable-preview
+                    </compilerArgs>
                     <source>14</source>
                     <target>14</target>
                 </configuration>
